# stm32f4_template

./: .gitignore  CMakeLists.txt  arm_none_eabi_toolchain.cmake  compile.sh  main.c  mcu_config.cmake  msp430_toolchain.cmake  toolchain.cmake  toolchain_old.cmake
FolderThatContainsTheMainFirmwareProject/: CMakeLists.txt
config/: FreeRTOSConfig.h
